--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Creative Portfolio, i am designer, webuilddigital, We design People Inspired Experiences that create positive change in people's lives., Visual communication for brands and people">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Giacomo Stoffa</title>
+    <title>Giacomo Stoffaa</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="index.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
