--- a/Pagina-1.html
+++ b/Pagina-1.html
@@ -32,7 +32,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Pagina-1.html" data-home-page-title="Pagina 1" class="u-body u-overlap"><header class="u-black u-clearfix u-header u-header" id="sec-9e1c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap"><header class="u-black u-clearfix u-header u-header" id="sec-9e1c"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1500" data-image-height="806">
           <img src="images/logo_large.png" class="u-logo-image u-logo-image-1">
         </a>
