--- a/Giacomo-Stoffa.html
+++ b/Giacomo-Stoffa.html
@@ -41,7 +41,7 @@
       </h2>
       <p class="u-text u-text-2"> I got my Bachelor's degree in Computer Science in February 2021 and I'm currently attending the&nbsp;<b>Master in Data Science</b>&nbsp;at the University of Milano-Bicocca.
       </p>
-      <a href="files/GiacomoStoffa_CV_3.pdf" class="u-active-none u-border-2 u-border-black u-btn u-btn-rectangle u-button-style u-file-link u-hover-none u-none u-btn-1" target="_blank">
+      <a href="files/GiacomoStoffa_CV4.pdf" class="u-active-none u-border-2 u-border-black u-btn u-btn-rectangle u-button-style u-file-link u-hover-none u-none u-btn-1" target="_blank">
         <span style="font-size: 1rem;">Curriculum Vitae</span>
         <br>
       </a>
@@ -84,6 +84,7 @@
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="1" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="2" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="3" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="4" style="width: 10px; height: 10px;"></li>
           </ol>
           <div class="u-carousel-inner" role="listbox">
             <div class="u-active u-align-center u-carousel-item u-container-style u-grey-50 u-slide">
@@ -124,6 +125,17 @@ of daily consumption different for performance characteristics<br>
                 <p class="u-large-text u-text u-text-variant u-text-8"> Design and development of a video surveillance system created using Raspberry PI.</p>
                 <h4 class="u-text u-text-default u-text-9">Maggio 2017-Luglio 2017 </h4>
                 <a href="files/tesinaGS.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-5" target="_blank"> READ MORE</a>
+              </div>
+            </div>
+            <div class="u-align-center u-carousel-item u-container-style u-grey-50 u-slide">
+              <div class="u-container-layout u-container-layout-5">
+                <div class="u-image u-image-circle u-preserve-proportions u-image-5" alt="" data-image-width="300" data-image-height="300"></div>
+                <p class="u-large-text u-text u-text-variant u-text-10"> Understanding the perception of cities in society<br>
+                  <br>Data Semantics
+                </p>
+                <h4 class="u-text u-text-default u-text-11">Settembre 2021-Gennaio 2022<br>
+                </h4>
+                <a href="files/UnderstandingPerceptionOfCitiesInSociety.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-6" target="_blank"> READ MORE</a>
               </div>
             </div>
           </div>
