--- a/Giacomo-Stoffa.html
+++ b/Giacomo-Stoffa.html
@@ -85,6 +85,9 @@
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="2" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="3" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="4" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="5" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="6" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="7" style="width: 10px; height: 10px;"></li>
           </ol>
           <div class="u-carousel-inner" role="listbox">
             <div class="u-active u-align-center u-carousel-item u-container-style u-grey-50 u-slide">
@@ -136,6 +139,40 @@ of daily consumption different for performance characteristics<br>
                 <h4 class="u-text u-text-default u-text-11">Settembre 2021-Gennaio 2022<br>
                 </h4>
                 <a href="files/UnderstandingPerceptionOfCitiesInSociety.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-6" target="_blank"> READ MORE</a>
+              </div>
+            </div>
+            <div class="u-align-center u-carousel-item u-container-style u-grey-50 u-slide">
+              <div class="u-container-layout u-container-layout-6">
+                <div class="u-image u-image-circle u-preserve-proportions u-image-6" alt="" data-image-width="300" data-image-height="300"></div>
+                <p class="u-large-text u-text u-text-variant u-text-12">King County, Washington:&nbsp;analysis and prediction of real estate sales.<br>
+                  <br>
+                  <br>Machine Learning:<br>supervised learning, cluster analysis
+                </p>
+                <h4 class="u-text u-text-default u-text-13">Febbraio 2022<br>
+                </h4>
+                <a href="files/TEAM23_Report.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-7" target="_blank"> READ MORE</a>
+              </div>
+            </div>
+            <div class="u-align-center u-carousel-item u-container-style u-grey-50 u-slide">
+              <div class="u-container-layout u-container-layout-7">
+                <div class="u-image u-image-circle u-preserve-proportions u-image-7" alt="" data-image-width="300" data-image-height="300"></div>
+                <p class="u-large-text u-text u-text-variant u-text-14">Audio classification, Face recognition , Image retrieval<br>
+                  <br>Digital Signal and Image Processing
+                </p>
+                <h4 class="u-text u-text-default u-text-15">Gennaio 2022-Febbraio 2022<br>
+                </h4>
+                <a href="files/presentazione_dsim_merlo_riva_stoffa.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-8" target="_blank"> READ MORE</a>
+              </div>
+            </div>
+            <div class="u-align-center u-carousel-item u-container-style u-grey-50 u-slide">
+              <div class="u-container-layout u-container-layout-8">
+                <div class="u-image u-image-circle u-preserve-proportions u-image-8" alt="" data-image-width="300" data-image-height="300"></div>
+                <p class="u-large-text u-text u-text-variant u-text-16">Topic Modeling and Text summarization<br>
+                  <br>Text Mining and search
+                </p>
+                <h4 class="u-text u-text-default u-text-17">Febbraio 2022<br>
+                </h4>
+                <a href="files/report_text_mining.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-9" target="_blank"> READ MORE</a>
               </div>
             </div>
           </div>
