--- a/Giacomo-Stoffa.html
+++ b/Giacomo-Stoffa.html
@@ -211,13 +211,13 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-blog-post u-container-style u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <a class="u-post-header-link" href="blog/post-5.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-image u-image-default u-image-1" src="images/kisspng-google-logo-brand-instagram-5ab6f4d8c0c8d5.0729092315219396727897.jpg" data-image-width="1380" data-image-height="719"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-image u-image-default u-image-1" src="images/logo.jpg" data-image-width="1380" data-image-height="719"><!--/blog_post_image-->
                 </a>
                 <h2 class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-1">
                   <span style="font-weight: 400;">Virten&nbsp;</span>
                   <span style="font-weight: 700;">Project</span>
                 </h2>
-                <img class="u-image u-image-circle u-preserve-proportions u-image-2" src="images/logo2.jpg" alt="" data-image-width="210" data-image-height="207">
+                <div class="u-image u-image-circle u-preserve-proportions u-image-2" alt="" data-image-width="210" data-image-height="207"></div>
                 <div class="u-social-icons u-spacing-10 u-social-icons-1">
                   <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/virten.it"><span class="u-icon u-social-icon u-social-instagram u-text-black"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-387e"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-387e"><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z
 	 M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path fill="#FFFFFF" d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path fill="currentColor" d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7
