--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html style="font-size: 14px;"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Creative Portfolio, i am designer, webuilddigital, We design People Inspired Experiences that create positive change in people's lives., Visual communication for brands and people">
-    <meta name="description" content="">
+    <meta name="keywords" content="Data Science Computer Science virtual Portfolio Giacomo Stoffa">
+    <meta name="description" content="Giacomo Stoffa Portfolio">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
+    <meta property="og:title" content="Giacomo Stoffa">
     <meta property="og:image" content="images/logo_small_icon_only.png">
     <title>Giacomo Stoffa</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -22,12 +23,11 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Site1",
+		"name": "Giacomo Stoffa",
 		"logo": "images/logo_large.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Giacomo Stoffa">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Giacomo Stoffa Portfolio">
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Giacomo-Stoffa.html" data-home-page-title="Giacomo Stoffa" class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-9e1c"><div class="u-clearfix u-sheet u-sheet-1">
@@ -47,13 +47,13 @@
         <br>
       </a>
     </section>
-    <section class="u-clearfix u-grey-10 u-section-2" id="sec-7c5b">
+    <section class="u-clearfix u-grey-10 u-valign-middle-sm u-section-2" id="sec-7c5b">
       <div class="u-expanded-width u-shape u-shape-rectangle u-white u-shape-1"></div>
       <div class="u-clearfix u-gutter-50 u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-row">
             <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
-              <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-xl u-container-layout-1">
+              <div class="u-container-layout u-valign-top u-container-layout-1">
                 <h2 class="u-text u-text-1">
                   <span style="font-weight: 700;">Data </span>Scientist
                 </h2>
@@ -205,7 +205,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       </div>
     </section>
     <section class="u-clearfix u-section-4" id="sec-beb2">
-      <div class="u-clearfix u-sheet u-sheet-1"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
+      <div class="u-clearfix u-sheet"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
         <div class="u-blog u-expanded-width u-blog-1">
           <div class="u-repeater u-repeater-1"><!--blog_post-->
             <div class="u-blog-post u-container-style u-repeater-item u-shape-rectangle">
