--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="6" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="7" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="8" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="9" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-5989" class="u-grey-30 u-shape-circle" data-u-slide-to="10" style="width: 10px; height: 10px;"></li>
           </ol>
           <div class="u-carousel-inner" role="listbox">
             <div class="u-active u-align-center u-carousel-item u-container-style u-grey-50 u-slide">
@@ -201,6 +203,34 @@ of daily consumption different for performance characteristics<br>
                 <a href="files/Report-ProjectTeamIndustryLab.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-10" target="_blank"> READ MORE</a>
               </div>
             </div>
+            <div class="u-align-center u-carousel-item u-container-style u-grey-50 u-slide u-carousel-item-10">
+              <div class="u-container-layout u-container-layout-10">
+                <div class="u-image u-image-circle u-preserve-proportions u-image-10" alt="" data-image-width="300" data-image-height="300"></div>
+                <p class="u-large-text u-text u-text-variant u-text-20"> Simulation and analysis of a bike sharing system<br>
+                  <br>- Complex Systems<br>
+                </p>
+                <h4 class="u-text u-text-default u-text-21">Aprile 2022 - Settembre 2022<br>
+                </h4>
+                <a href="files/report_ComplexSystem-compressed.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-11" target="_blank"> READ MORE</a>
+              </div>
+            </div>
+            <div class="u-carousel-item u-container-style u-grey-50 u-slide u-carousel-item-11">
+              <div class="u-container-layout u-container-layout-11">
+                <div class="u-image u-image-circle u-preserve-proportions u-image-11" alt="" data-image-width="300" data-image-height="300"></div>
+                <p class="u-align-center u-large-text u-text u-text-variant u-text-22"> "What would the world be without Italian cuisine?"
+The opinion of ordinary customers is the same as that of experts
+gastronomes?
+And the tools available to make the choice related to
+where to go for lunch or dinner are satisfactory?<br>This project aims to obtain, through web scraping techniques, reviews of the best restaurants taking into consideration the michelin guide and tripadvisor reviews.<br>
+                  <br>- Data Management
+                </p>
+                <h4 class="u-align-center u-text u-text-default u-text-23">Giugno 2022 - Settembre 2022<br>
+                </h4>
+                <a href="files/Report-ProjectTeamIndustryLab.pdf" class="u-btn u-btn-round u-button-style u-file-link u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-12" target="_blank"> READ MORE</a>
+                <a href="files/DATAMAN-compresso.pdf" class="u-btn u-btn-round u-button-style u-file-link u-hover-palette-1-light-2 u-palette-1-light-3 u-radius-50 u-btn-13" target="_blank"><span class="u-icon"><svg class="u-svg-content" viewBox="0 0 30.727 30.727" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M29.994,10.183L15.363,24.812L0.733,10.184c-0.977-0.978-0.977-2.561,0-3.536c0.977-0.977,2.559-0.976,3.536,0   l11.095,11.093L26.461,6.647c0.977-0.976,2.559-0.976,3.535,0C30.971,7.624,30.971,9.206,29.994,10.183z"></path></svg><img></span>presentation
+                </a>
+              </div>
+            </div>
           </div>
           <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-hidden-xs u-icon-circle u-spacing-10 u-carousel-control-1" href="#carousel-5989" role="button" data-u-slide="prev">
             <span aria-hidden="true">
@@ -236,7 +266,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-blog-post u-container-style u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <a class="u-post-header-link" href="blog/post-5.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-image u-image-default u-image-1" src="images/logo.jpg" data-image-width="1380" data-image-height="719"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-image u-image-default u-image-1" src="images/logo.jpg" data-image-width="1380" data-image-height="719" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Down"><!--/blog_post_image-->
                 </a>
                 <h2 class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-1">
                   <span style="font-weight: 400;">Virten&nbsp;</span>
